--- a/Renta_Javier/templates/accounts/edithome.html
+++ b/Renta_Javier/templates/accounts/edithome.html
@@ -14,7 +14,7 @@
                 <div style="margin-top: -15px; margin-bottom: 20px;">
                     <h5>
                         <a href="{% url 'homepreview' house_id %}"><i class="bi bi-arrow-left-circle"></i></a>
-                        Volver a la Casa
+                        Volver a la Propiedad
                     </h5>
                 </div>
                 <div class="col-12 col-lg-8 col-md-12 col-xs-12">
