--- a/Renta_Javier/templates/accounts/home_preview.html
+++ b/Renta_Javier/templates/accounts/home_preview.html
@@ -13,7 +13,7 @@
                 <div>
                     <h5>
                         <a href="{% url 'yourhouses' %}"><i class="bi bi-arrow-left-circle"></i></a>
-                        Volver a Tus Casas
+                        Volver a Tus Propiedades
                     </h5>
                 </div>
                 <div class="col-lg-8 col-md-12 col-xs-12">
