--- a/Renta_Javier/templates/accounts/signin.html
+++ b/Renta_Javier/templates/accounts/signin.html
@@ -23,6 +23,11 @@
                         </div>
 
                         <div class="form-label-group">
+                            <input type="text" id="inputRUT" name="rut" class="form-control" placeholder="RUT (sin puntos y con guión)" required>
+                            <label for="inputRUT">RUT*</label>
+                        </div>
+                        
+                        <div class="form-label-group">
                             <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required>
                             <label for="password">Contraseña</label>
                         </div>
