--- a/Renta_Javier/templates/pages/house.html
+++ b/Renta_Javier/templates/pages/house.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-    Casa | {{ house.HOUSE_NAME }}
+Propiedad | {{ house.HOUSE_NAME }}
 {% endblock title %}
 
 {% block content %}
