--- a/Renta_Javier/templates/pages/reservation.html
+++ b/Renta_Javier/templates/pages/reservation.html
@@ -32,7 +32,7 @@
                         {% csrf_token %}
                         <div class="input-group mb-3">
                             <select class="form-control search-fields mb-3" name="paymentMethod" id="paymentMethod">
-                                <option selected="true" disabled="disabled">Tarjeta de crédito o débito</option>
+                                <option selected="true" disabled="disabled">Tarjeta de crédito, débito o prepago</option>
                                 {% comment %} <option disabled="disabled">Cuenta bancaria</option> {% endcomment %}
                             </select>
                         </div>
