--- a/Renta_Javier/templates/accounts/profile.html
+++ b/Renta_Javier/templates/accounts/profile.html
@@ -52,8 +52,16 @@
                     <input type="tel" id="phonenumber" name="phonenumber" value="{{ phone }}" class="form-control" aria-describedby="">
                 </div>
             </div>
+
             <div class="mb-3 row">
-                <label for="bankaccount" class="col-sm-2 col-form-label">Número de cuenta bancaria</label>
+                <label for="inputRUT" class="col-sm-2 col-form-label">RUT</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputRUT" name="rut" value="{{ rut }}" required>
+                </div>
+            </div>
+            
+            <div class="mb-3 row">
+                <label for="bankaccount" class="col-sm-2 col-form-label">Cuenta bancaria (RUT del banco)</label>
                 <div class="col-sm-10">
                     {% if bankacc %}
                         <input type="text" id="bankaccount" name="bankaccount" value="{{ bankacc }}" class="form-control" aria-describedby="">
