--- a/Renta_Javier/templates/accounts/signup.html
+++ b/Renta_Javier/templates/accounts/signup.html
@@ -1,10 +1,6 @@
 {% extends 'base/base.html' %}
 {% load static %}
-{% block title %} Cuentas | Registrarse {% endblock %}
-{% block includecss %}
-    <link rel="stylesheet" type="text/css"  href="{% static 'css/signin.css' %}">
-{% endblock includecss %}
-
+{% block title %}Cuentas | Registrarse{% endblock %}
 {% block content %}
 
 <div class="container">
@@ -13,57 +9,45 @@
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
             <div class="card card-signin my-5">
                 <div class="card-body">
-                <h5 class="card-title text-center">Registrarse</h5>
-                    <form class="form-signin" method="POST">
-                        
-                        {% csrf_token %}  
+                    <h5 class="card-title text-center">Registrarse</h5>
+                    <form class="form-signin" method="post">
+                        {% csrf_token %}
                         <div class="form-label-group">
-                            {% if firstname %}
-                                <input type="text" id="firstname" name="firstname" value="{{ firstname }}" class="form-control" aria-describedby="">
-                            {% else %}
-                                <input type="text" id="firstname" name="firstname" placeholder="Nombre" class="form-control" aria-describedby="">
-                            {% endif %}
-                        <label for="firstname">Nombre</label>
+                            <input type="text" id="inputFirstName" name="firstname" class="form-control" placeholder="Nombre" required autofocus value="{{ firstname|default:'' }}">
+                            <label for="inputFirstName">Nombre</label>
                         </div>
                         <div class="form-label-group">
-                            {% if lastname %}
-                                <input type="text" id="lastname" name="lastname" value="{{ lastname }}" class="form-control" aria-describedby="">
-                            {% else %}
-                                <input type="text" id="lastname" name="lastname" placeholder="Apellido" class="form-control" aria-describedby="">
-                            {% endif %}
-                            <label for="lastname">Apellido</label>
+                            <input type="text" id="inputLastName" name="lastname" class="form-control" placeholder="Apellido" required value="{{ lastname|default:'' }}">
+                            <label for="inputLastName">Apellido</label>
                         </div>
                         <div class="form-label-group">
-                            {% if username %}
-                                <input type="text" id="username" name="username" value="{{ username }}" class="form-control" aria-describedby="" required>
-                            {% else %}
-                                <input type="text" id="username" name="username" placeholder="Nombre de usuario" class="form-control" aria-describedby="" required>
-                            {% endif %}
-                            <label for="username">Nombre de usuario*</label>
+                            <input type="text" id="inputRUT" name="rut" class="form-control" placeholder="RUT (sin puntos y con guión)" required>
+                            <label for="inputRUT">RUT*</label>
                         </div>
                         <div class="form-label-group">
-                            {% if email %}
-                                <input type="email" id="email" name="email" value="{{ email }}" class="form-control" aria-describedby="" required>
-                            {% else %}
-                                <input type="email" id="email" name="email" placeholder="correo@gmail.com" class="form-control" aria-describedby="" required>
-                            {% endif %}
-                            <label for="email">Correo electrónico*</label>
+                            <input type="text" id="inputUsername" name="username" class="form-control" placeholder="Nombre de usuario" required value="{{ username|default:'' }}">
+                            <label for="inputUsername">Nombre de usuario*</label>
                         </div>
                         <div class="form-label-group">
-                            <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required>
-                            <label for="password">Contraseña</label>
+                            <input type="email" id="inputEmail" name="email" class="form-control" placeholder="Correo electrónico" required value="{{ email|default:'' }}">
+                            <label for="inputEmail">Correo electrónico*</label>
                         </div>
                         <div class="form-label-group">
-                            <input type="password" id="confirmpassword" name="confirmpassword" class="form-control" placeholder="Confirmar Contraseña" aria-describedby="" required>
-                            <label for="confirmpassword">Confirmar Contraseña</label>
+                            <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Contraseña" required>
+                            <label for="inputPassword">Contraseña</label>
                         </div>
-                        <button class="btn btn-lg btn-create-acc btn-block text-uppercase" type="submit" value="submit">Crear Cuenta</button>
-                        <hr>
-                        <a class="btn btn-lg btn-primary btn-block text-uppercase" href="{% url 'signin' %}">Iniciar Sesión</a>
+                        <div class="form-label-group">
+                            <input type="password" id="inputConfirmPassword" name="confirmpassword" class="form-control" placeholder="Confirmar Contraseña" required>
+                            <label for="inputConfirmPassword">Confirmar Contraseña</label>
+                        </div>
+                        <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Crear Cuenta</button>
+                        <hr class="my-4">
+                        <a href="{% url 'signin' %}" class="btn btn-lg btn-secondary btn-block text-uppercase">Iniciar Sesión</a>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 {% endblock content %}
